apps/app-proxy/overlays/new-codefresh/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: new-codefresh-cap-app-proxy
  namespace: new-codefresh
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: cap-app-proxy
            port:
              number: 3017
        path: /app-proxy
        pathType: ImplementationSpecific
status:
  loadBalancer: {}
